# trajectory_optimizer

trajectory_optimizer/: CMakeLists.txt  package.xml
trajectory_optimizer/include/trajectory_optimizer/: trajectory_optimizer.h
trajectory_optimizer/src/: trajectory_optimizer.cpp
trajectory_optimizer_sample/: CMakeLists.txt  package.xml
trajectory_optimizer_sample/src/: test1.cpp
