<?xml version="1.0"?>
<package format="2">
  <name>trajectory_optimizer_sample</name>
  <version>0.0.0</version>
  <description>The trajectory_optimizer_sample package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ik_constraint2</depend>
  <depend>prioritized_inverse_kinematics_solver2</depend>
  <depend>trajectory_optimizer</depend>

</package>
